# LOUDS_C_PLUS_PLUS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: jawiki-louds-benchmark.yml
src/louds/: louds_converter_utf16.cpp  louds_converter_utf16.hpp  louds_utf16_reader.cpp  louds_utf16_reader.hpp  louds_utf16_writer.cpp  louds_utf16_writer.hpp
src/louds_with_term_id/: converter_with_term_id_utf16.cpp  converter_with_term_id_utf16.hpp  louds_with_term_id_utf16_reader.cpp  louds_with_term_id_utf16_reader.hpp  louds_with_term_id_utf16_writer.cpp  louds_with_term_id_utf16_writer.hpp
src/prefix/: prefix_tree_utf16.cpp  prefix_tree_utf16.hpp
src/prefix_with_term_id/: prefix_tree_with_term_id_utf16.cpp  prefix_tree_with_term_id_utf16.hpp
src/tools/: jawiki_build.cpp  jawiki_build_utf16.cpp  louds_query.cpp  louds_query_utf16.cpp
tests/: test_louds_utf16_reader.cpp  test_louds_utf16_writer.cpp  test_louds_with_term_id_utf16_reader.cpp  test_louds_with_term_id_utf16_writer.cpp
